[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shecan"
version = "0.4.2"
description = "The Shecan CLI is used to configure your DNS configuration based on Shecan website from the command line."
readme = "README.md"
authors = [
    {name = "Bahram Aghaei", email = "aghaee.bahram@gmail.com"},
]
license = {text = "Academic Free License, version 3"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "bs4",
    "lxml",
    "tabulate",
]

[project.urls]
Homepage = "https://github.com/GreatBahram/Shecan-cli/"
"Source Code" = "https://github.com/GreatBahram/shecan-cli"
"Change Log" = "https://github.com/GreatBahram/shecan-cli/blob/master/CHANGES.md"

[project.scripts]
shecan = "shecan.cli:shecan_cli"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["src/tests"]
