[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shecan"
version = "0.4.3"
description = "The Shecan CLI is used to configure your DNS configuration based on Shecan website from the command line."
readme = "README.md"
authors = [
    {name = "Bahram Aghaei", email = "aghaee.bahram@gmail.com"},
]
license = {text = "Academic Free License, version 3"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "bs4",
    "lxml",
    "tabulate",
]

[project.urls]
Homepage = "https://github.com/GreatBahram/Shecan-cli/"
"Source Code" = "https://github.com/GreatBahram/shecan-cli"
"Change Log" = "https://github.com/GreatBahram/shecan-cli/blob/master/CHANGES.md"

[project.scripts]
shecan = "shecan.cli:shecan_cli"

[project.optional-dependencies]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 88

exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv"]

# Assume Python 3.09
target-version = "py39"

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle error
    "F",   # Pyflakes
    "I",   # isort
    "INP", # flake8-no-pep420
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PLC", # Pylint convention
    "PLE", # Pylint error
    "PLR", # Pylint refactor
    "PLW", # Pylint warning
    "PYI", # flake8-pyi
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warning
]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
  "ANN",     # Ignores all type hints
  "PLR0904", # Ignores "Too many public methods"
  "PLR0913", # Ignores "Too many arguments to function call"
  "PLR0917", # Ignores "Too many positional arguments" 
]
