[metadata]
author = Bahram Aghaei
author_email = aghaee.bahram@gmail.com
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = Academic Free License, version 3
license_file = LICENSE
name = shecan
description = 'The Shecan CLI is used to configure your DNS configuration based on Shecan website from the command line.'
long_description = file:README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/GreatBahram/shecan-cli
    Change Log = https://github.com/GreatBahram/shecan-cli/blob/master/CHANGES.md
url = https://github.com/GreatBahram/Shecan-cli/
version = 0.3.2

[options]
include_package_data = True
install_requires =
    requests
    bs4
    lxml
    tabulate
package_dir =
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    shecan = shecan.cli:shecan_cli
